# crowdsource

./: .copier-answers.yaml  .gitignore  CLI-ideas.md  Cargo.toml  Makefile  README.md  pyproject.toml
.agents/skills/crowdsource-competition-author/: SKILL.md
.agents/skills/crowdsource-forecaster/: SKILL.md
.agents/skills/crowdsource-oracle-validator/: SKILL.md
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  docs.yaml  mirror.yaml
crowdsource/: __init__.py  _config.py  _fmt.py  cli.py
crowdsource/tests/: test_all.py  test_cli.py
js/: Cargo.toml  build.mjs  package.json  pnpm-lock.yaml
js/src/html/: index.html
js/src/rust/: lib.rs
js/src/ts/: index.ts
mcp/: README.md  package-lock.json  package.json  tsconfig.json
mcp/src/: index.ts
rust/: Cargo.toml
rust/python/: lib.rs
rust/python/example/: mod.rs
rust/src/: client.rs  error.rs  lib.rs  models.rs
rust/tests/: integration.rs
