[package]
name = "crowdsource_js"
version = "0.1.0"
edition = "2021"
publish = false
keywords = ["experimental"]
include = ["src/**/*", "Cargo.toml", "package.json"]

[lib]
name = "crowdsource"
path = "src/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
crowdsource = { path = "../rust", version = "*" }
wasm-bindgen = "=0.2.115"
