[package]
name = "crowdsource_js"
version = "0.1.0"
edition = "2021"
publish = false
keywords = ["experimental"]
include = ["src/**/*", "Cargo.toml", "package.json"]

[lib]
name = "crowdsource"
path = "src/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
# default-features = false → just the (transport-free) models + error types, so
# the wasm build doesn't pull the native reqwest/rustls transport. The JS client
# transport is a wasm shell (future phase).
crowdsource = { path = "../rust", version = "*", default-features = false }
wasm-bindgen = "=0.2.115"
