[package]
name = "crowdsource_js"
version = "0.2.0"
edition = "2021"
publish = false
keywords = ["experimental"]
include = ["src/**/*", "Cargo.toml", "package.json"]

[lib]
name = "crowdsource"
path = "src/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
# The core's `client` feature compiles its reqwest transport against the browser
# fetch backend on wasm (no rustls), so the wasm shell wraps the real Client.
crowdsource = { path = "../rust", version = "*", default-features = false, features = ["client"] }
wasm-bindgen = "=0.2.126"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
serde = "1.0"
serde_json = "1.0"
js-sys = "0.3"
uuid = "1"
getrandom = { version = "0.2", features = ["js"] }
