[package]
name = "crowdsource"
version = "0.1.0"
authors = ["1kbgz <dev@1kbgz.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/1kbgz/crowdsource"
description = "crowdsource.sh"

[lib]
name = "crowdsource"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }