[package]
name = "crowdsource"
version = "0.2.0"
authors = ["1kbgz <dev@1kbgz.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/1kbgz/crowdsource"
description = "crowdsource.sh"

[lib]
name = "crowdsource"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
# `client` pulls in the reqwest HTTP transport. On by default for native targets;
# wasm/python bindings can depend on this crate with default-features = false to
# get just the (transport-free) models + error types.
default = ["client"]
client = ["dep:reqwest"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
thiserror = "2.0"

# Native: reqwest with rustls. wasm: reqwest uses the browser fetch (no TLS
# stack), so the rustls feature must be dropped. The `client` feature gates
# either one in via `dep:reqwest`.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls"] }
# Native-only backoff sleep for the GET retry loop (used inside the
# `client`-gated, non-wasm path; already present in reqwest's dependency tree).
tokio = { version = "1", default-features = false, features = ["time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
